--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
     "redux-persist": "^5.10.0",
